--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button onclick="start()"> start </button>
     <div class="marks"></div>
     <button onclick = "calculate()"> Calculate Percentage </button>
-    <style>*{text-align: center;}</style>
+    <style>*{text-align: center; padding: 10px 20px;}</style>
     <script>
         let num;
         const marks = []
