--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             const w = with_credits();
             const wo = without_credits();
 
-            document.querySelector(".marks").innerHTML += `<p> With Credits : ${w} </p>`
-            document.querySelector(".marks").innerHTML += `Without Credits : ${wo} `
+            document.querySelector(".marks").innerHTML += `<p> With Credits : ${w.toFixed(2)} </p>`
+            document.querySelector(".marks").innerHTML += `Without Credits : ${wo.toFixed(2)} `
         }
 
 
