More user friendly

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div><button>Enter Total Number of Subjects (then press start)</button></div>
     <input type="Number" class="number">
     <button onclick="start()"> start </button>
     <div class="marks"></div>
